After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688477 - inputselector: fix clock leak in wait_running_time
inputselector: fix clock leak in wait_running_time
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
1.0.2
Other Linux
: Normal normal
: 1.0.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-16 16:51 UTC by Arnaud Vrac
Modified: 2012-11-17 10:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
inputselector: fix clock leak in wait_running_time (777 bytes, patch)
2012-11-16 16:51 UTC, Arnaud Vrac
committed Details | Review

Description Arnaud Vrac 2012-11-16 16:51:42 UTC
Created attachment 229163 [details] [review]
inputselector: fix clock leak in wait_running_time 

add missing unref in input selector
Comment 1 Tim-Philipp Müller 2012-11-17 10:19:13 UTC
Thanks!


commit b4a91de1be914ad3acaf4e9e3220cfcf7d2b636d
Author: Arnaud Vrac <avrac@freebox.fr>
Date:   Tue Nov 13 21:13:00 2012 +0100

    inputselector: fix clock leak in wait_running_time
    
    https://bugzilla.gnome.org/show_bug.cgi?id=688477