inputselector: fix clock leak in wait_running_time

https://bugzilla.gnome.org/show_bug.cgi?id=688477